# GameEventSystem

./: .gitignore  CMakeLists.txt  GameEventSystem.vcxproj  GameEventSystem.vcxproj.filters  README.md  ServerAll.sln
Core/: EventContext.h  EventDispatcher.h  EventHandlerRegistry.cpp  EventHandlerRegistry.h  EventType.h  GameTypes.h  IEventHandler.h
Debug/: GameEventSystem.ilk  vc141.idb
Debug/GameEventSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameEventSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Handlers/: AttendanceEventHandler.cpp  AttendanceEventHandler.h  BenedictionEventHandler.cpp  BenedictionEventHandler.h  BingoEventHandler.cpp  BingoEventHandler.h  HuntingEventHandler.cpp  HuntingEventHandler.h  MissionPassEventHandler.cpp  MissionPassEventHandler.h  SiegeEveEventHandler.cpp  SiegeEveEventHandler.h
Test/: MockTypes.h  main.cpp
Update/: EventInfoPacketBuilder.cpp  EventInfoPacketBuilder.h  EventLoginSyncer.cpp  EventLoginSyncer.h  EventUpdateChecker.cpp  EventUpdateChecker.h
